@@ -1,3 +1,8 @@
+2003-08-25  Alexander Larsson  <alexl@redhat.com>
+
+	* schemas/desktop_gnome_url_handlers.schemas.in:
+	Add http url handlers.
+
 2003-08-17  Paisa Seeluangsawat  <paisa@users.sf.net>
 
         * configure.in: Added Thai (th) to ALL_LINGUAS.
